style: add font family and flex to center all

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="src/index.css">
   </head>
   <body class="font-space w-full h-dvh">
-    <main id="root"></main>
+    <main id="root" class="w-full h-full flex max-[1100px]:flex-col max-[1100px]:items-center"></main>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
